[package]
name = "waywin"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
raw-window-handle = "0.6.2"

windows = { version = "0.61.3", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_UI_HiDpi",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dev-dependencies]
colog = "1.3.0"
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
